Adde dnew pages like register and new ticket

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
 <ion-content padding>
   <h3>Welcome to FMS (NOC)</h3>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <!--<button ion-button secondary menuToggle>Toggle Menu</button>-->
 
   <button ion-button block (click)="logout()">LOGOUT</button>
 </ion-content>
