--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,12 +9,12 @@
 	<ion-list>
 		<ion-item>
 			<ion-label fixed >Username</ion-label>
-			<ion-input type="text" value=""></ion-input>
+			<ion-input type="text" value="" required [(ngModel)]="loginData.email"></ion-input>
 		</ion-item>
 
 		<ion-item>
 			<ion-label fixed >Password</ion-label>
-			<ion-input type="password"></ion-input>
+			<ion-input type="password" required [(ngModel)]="loginData.password"></ion-input>
 		</ion-item>
 	</ion-list>
 
