--- a/src/pages/bsn-ticket/bsn-ticket.html
+++ b/src/pages/bsn-ticket/bsn-ticket.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>New Transmission Ticket</ion-title>
+    <ion-title>New Base Station Switch Ticket</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -18,12 +18,12 @@
 	<ion-list>
 		<ion-item>
 			<ion-label fixed >Title</ion-label>
-			<ion-input type="text" value="" required [(ngModel)]="transmissionTicketData.title"></ion-input>
+			<ion-input type="text" value="" required [(ngModel)]="bsnTicketData.title"></ion-input>
 		</ion-item>
 
 		<ion-item>
 		<ion-label>Region</ion-label>
-		<ion-select [(ngModel)]="transmissionTicketData.region" required>
+		<ion-select [(ngModel)]="bsnTicketData.region" required>
 		  <ion-option value="1">Abia State</ion-option>
 		  <ion-option value="2">Adamawa State</ion-option>
 		  <ion-option value="3">Akwa Ibom State</ion-option>
@@ -69,7 +69,7 @@
 
 		<ion-item>
     <ion-label>Priority</ion-label>
-    <ion-select [(ngModel)]="transmissionTicketData.priority" required>
+    <ion-select [(ngModel)]="bsnTicketData.priority" required>
       <ion-option value="low">Low</ion-option>
       <ion-option value="medium">Medium</ion-option>
       <ion-option value="high">High</ion-option>
@@ -77,31 +77,27 @@
   </ion-item>
 
   		<ion-item>
-			<ion-label fixed >Node A</ion-label>
-			<ion-input type="text" value="" required [(ngModel)]="transmissionTicketData.node_a"></ion-input>
+			<ion-label fixed >Site ID</ion-label>
+			<ion-input type="text" value="" required [(ngModel)]="bsnTicketData.site_id"></ion-input>
 		</ion-item>
 		<ion-item>
-			<ion-label fixed >Node B</ion-label>
-			<ion-input type="text" value="" required [(ngModel)]="transmissionTicketData.node_b"></ion-input>
-		</ion-item>
-		<ion-item>
-			<ion-label fixed >Vendor</ion-label>
-			<ion-input type="text" value="" required [(ngModel)]="transmissionTicketData.vendor"></ion-input>
+			<ion-label fixed >BSC/RNC</ion-label>
+			<ion-input type="text" value="" required [(ngModel)]="bsnTicketData.bsc_rnc"></ion-input>
 		</ion-item>
 		<ion-item>
 			<ion-label fixed >Time of Occurence</ion-label>
-			<ion-input type="text" value="" required [(ngModel)]="transmissionTicketData.time_of_occ"></ion-input>
+			<ion-input type="text" value="" required [(ngModel)]="bsnTicketData.time_of_occ"></ion-input>
 		</ion-item>
 		<ion-item>
 			<ion-label fixed >Cause of Failure</ion-label>
-			<ion-input type="text" value="" required [(ngModel)]="transmissionTicketData.cause_of_failure"></ion-input>
+			<ion-input type="text" value="" required [(ngModel)]="bsnTicketData.cause_of_failure"></ion-input>
 		</ion-item>
 		<ion-item>
 			<ion-label fixed >Impact</ion-label>
-			<ion-input type="text" value="" required [(ngModel)]="transmissionTicketData.impact"></ion-input>
+			<ion-input type="text" value="" required [(ngModel)]="bsnTicketData.impact"></ion-input>
 		</ion-item>
 
-		<button ion-button block color="primary" (click)="addTansmissionTicket()">Add Transmission Ticket</button>
+		<button ion-button block color="primary" (click)="addBscTicket()">Add Transmission Ticket</button>
 </ion-list>
 
 </ion-content>
