Validation for the static pages

--- a/src/pages/all-tickets/all-tickets.html
+++ b/src/pages/all-tickets/all-tickets.html
@@ -10,7 +10,7 @@
 
 <ion-content padding>
 	<h2>Trouble Tickets</h2>
-	<ion-card>
+	<ion-card (click)="testFunc()">
 
 	  <ion-card-header>
 	    #0RT1JBAHS7
