--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,18 +6,32 @@
 -->
 <ion-content padding>
 
-	<ion-list>
+	
+	<form [formGroup]="loginForm">
+	<p *ngIf="submitAttempt" style="color: #ea6153;">Please fill out all details accurately.</p>
+	<ion-list no-lines>
 		<ion-item>
-			<ion-label fixed >Username</ion-label>
-			<ion-input type="text" value="" required [(ngModel)]="loginData.email"></ion-input>
+			<ion-label floating >Username</ion-label>
+			<ion-input type="text" value="" required formControlName="email"
+			[class.invalid]="!loginForm.controls.email.valid && (loginForm.controls.email.dirty || submitAttempt)"></ion-input>
 		</ion-item>
 
+		<ion-item *ngIf="!loginForm.controls.email.valid  && (loginForm.controls.email.dirty || submitAttempt)">
+                <p style="color: #ea6153;">Please enter your email address.</p>
+        </ion-item>
+
 		<ion-item>
-			<ion-label fixed >Password</ion-label>
-			<ion-input type="password" required [(ngModel)]="loginData.password"></ion-input>
+			<ion-label floating >Password</ion-label>
+			<ion-input type="password" required formControlName="password"
+			[class.invalid]="!loginForm.controls.password.valid && (loginForm.controls.password.dirty || submitAttempt)"></ion-input>
 		</ion-item>
+
+		<ion-item *ngIf="!loginForm.controls.password.valid  && (loginForm.controls.password.dirty || submitAttempt)">
+                <p style="color: #ea6153;">Please enter your password.</p>
+        </ion-item>
 	</ion-list>
 
 	<button ion-button block color="primary" (click)="login_act()">LOGIN</button>
+	</form>
 
 </ion-content>
